--- a/components/button/package.json
+++ b/components/button/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
+    "react": "^16.8.1"
   },
   "author": "",
   "license": "MIT",
