--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,8 @@
 {
   "lerna": "2.4.0",
   "packages": [
-    "packages/*"
+    "components/*"
   ],
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "npmClient": "yarn"
 }
