--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,9 @@
 {
   "lerna": "2.4.0",
+  "version": "independent",
+  "npmClient": "yarn",
+  "useWorkspaces": true,
   "packages": [
     "components/*"
-  ],
-  "version": "0.0.1",
-  "npmClient": "yarn"
+  ]
 }
