--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
 	"name": "coffee-shope",
 	"scripts": {
 		"bootstrap": "lerna bootstrap",
-		"publish": "lerna publish"
+		"publish": "lerna publish",
+		"storybook": "start-storybook -p 9001 -c .storybook"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.2.2",
+		"@storybook/react": "^4.1.11",
+		"babel-loader": "^8.0.5",
 		"lerna": "^2.4.0"
 	},
 	"dependencies": {
-		"react": "^16.8.1"
+		"react": "^16.8.1",
+		"react-dom": "^16.8.1"
 	},
 	"license": "MIT"
 }
