--- a/lerna.json
+++ b/lerna.json
@@ -2,8 +2,10 @@
   "lerna": "2.4.0",
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true,
   "packages": [
     "components/*"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
