--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
 	"devDependencies": {
 		"@babel/core": "^7.2.2",
 		"@storybook/react": "^4.1.11",
+		"babel-core": "^6.26.3",
 		"babel-loader": "^8.0.5",
-		"lerna": "^2.4.0"
+		"babel-preset-env": "^1.7.0",
+		"lerna": "^2.4.0",
+		"node-sass": "^4.11.0",
+		"sass-loader": "^7.1.0",
+		"webpack": "^4.29.3",
+		"webpack-cli": "^3.2.3"
 	},
 	"dependencies": {
 		"react": "^16.8.1",
