--- a/utils/cs-scripts/package.json
+++ b/utils/cs-scripts/package.json
@@ -22,7 +22,10 @@
   "homepage": "https://github.com/jay-almaraz/coffee-shope#readme",
   "dependencies": {
     "chalk": "^2.4.2",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "lodash": "^4.17.11",
+    "path": "^0.12.7",
     "yargs": "^12.0.5"
   }
 }
