--- a/utils/cs-scripts/package.json
+++ b/utils/cs-scripts/package.json
@@ -24,6 +24,7 @@
     "chalk": "^2.4.2",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
+    "fs": "^0.0.1-security",
     "lodash": "^4.17.11",
     "path": "^0.12.7",
     "yargs": "^12.0.5"
