--- a/utils/cs-scripts/package.json
+++ b/utils/cs-scripts/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/jay-almaraz/coffee-shope#readme",
   "dependencies": {
     "chalk": "^2.4.2",
+    "copy-dir": "^0.4.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "fs": "^0.0.1-security",
