--- a/utils/cs-scripts/package.json
+++ b/utils/cs-scripts/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@coffee-shope/cs-scripts",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A set of scripts for scaffolding and building coffee-shope components",
   "main": "index.js",
   "bin": {
-    "shope": "node index.js"
+    "shope": "index.js"
   },
   "scripts": {
     "start": "node index.js",
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/jay-almaraz/coffee-shope#readme",
   "dependencies": {
     "chalk": "^2.4.2",
+    "change-case": "^3.1.0",
     "copy-dir": "^0.4.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
