--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "coffee-shope",
 	"scripts": {
-		"create-component": "shope create component",
+		"create-component": "shope create component && lerna bootstrap",
 		"bootstrap": "lerna bootstrap",
 		"publish": "lerna publish --ignore coffee-shope --message=\"chore: Publish packages\"",
 		"storybook": "start-storybook -p 9001 -c .storybook"
