--- a/components/button/package.json
+++ b/components/button/package.json
@@ -1,12 +1,9 @@
 {
   "name": "@coffee-shope/button",
-  "version": "1.0.6-0",
+  "version": "1.0.5",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "publishConfig": {
-    "access": "public"
   },
   "peerDependencies": {
     "react": "^16.8.1"
