--- a/components/button/package.json
+++ b/components/button/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.4-0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "shope build"
   },
   "publishConfig": {
     "access": "public"
