--- a/utils/cs-scripts/templates/component/package.json
+++ b/utils/cs-scripts/templates/component/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "jest",
     "start": "shope stories",
-    "build": "shope build"
+    "build": "shope build",
+    "prepublishOnly": "shope build"
   },
   "publishConfig": {
     "access": "public"
