--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,8 @@
   "version": "independent",
   "npmClient": "yarn",
   "packages": [
-    "components/*"
+    "components/*",
+    "utils/*"
   ],
   "publishConfig": {
     "access": "public"
