--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"scripts": {
 		"create-component": "shope create component && lerna bootstrap",
 		"bootstrap": "lerna bootstrap",
-		"publish": "lerna publish --ignore coffee-shope --message=\"chore: Publish packages\"",
+		"publish-all": "lerna publish --ignore coffee-shope --message=\"chore: Publish packages\"",
 		"storybook": "start-storybook -p 9001 -c .storybook"
 	},
 	"devDependencies": {
