stop using relative paths for theme

--- a/components/checkbox/package.json
+++ b/components/checkbox/package.json
@@ -19,5 +19,8 @@
   },
   "author": "",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@coffee-shope/theme": "^1.0.1"
+  }
 }
