--- a/components/field/package.json
+++ b/components/field/package.json
@@ -20,5 +20,8 @@
   },
   "author": "",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@coffee-shope/theme": "^1.0.1"
+  }
 }
