--- a/components/button/package.json
+++ b/components/button/package.json
@@ -14,5 +14,8 @@
   },
   "author": "",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@coffee-shope/theme": "^1.0.1"
+  }
 }
