Add util-ts tempalte

--- a/utils/cs-scripts/templates/util-ts/package.json
+++ b/utils/cs-scripts/templates/util-ts/package.json
@@ -20,8 +20,5 @@
   },
   "author": "",
   "license": "MIT",
-  "description": "",
-  "dependencies": {
-    "@coffee-shope/theme": "^1.0.1"
-  }
+  "description": ""
 }
