--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
 	"devDependencies": {
 		"@babel/core": "^7.2.2",
 		"@babel/plugin-proposal-decorators": "^7.3.0",
+		"@babel/plugin-proposal-json-strings": "^7.2.0",
+		"@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
+		"@babel/plugin-syntax-import-meta": "^7.2.0",
+		"@babel/plugin-transform-runtime": "^7.2.0",
+		"@babel/preset-env": "^7.3.1",
 		"@babel/preset-react": "^7.0.0",
+		"@babel/preset-typescript": "^7.3.3",
 		"@coffee-shope/cs-scripts": "^1.0.3",
 		"@storybook/react": "^4.1.11",
 		"babel-core": "^6.26.3",
@@ -30,7 +37,7 @@
 		"utils/*"
 	],
 	"dependencies": {
-		"@babel/plugin-proposal-class-properties": "^7.3.0",
+		"@babel/plugin-proposal-class-properties": "^7.3.3",
 		"react": "^16.8.1",
 		"react-dom": "^16.8.1"
 	},
