--- a/utils/cs-scripts/templates/component-ts/package.json
+++ b/utils/cs-scripts/templates/component-ts/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@coffee-shope/cs-scripts": "^1.0.0",
+    "@types/react": "^16.8.1",
     "typescript": "^3.3.1"
   },
   "author": "",
