--- a/utils/cs-scripts/templates/util-ts/tsconfig.json
+++ b/utils/cs-scripts/templates/util-ts/tsconfig.json
@@ -1,16 +1,18 @@
 {
   "compilerOptions": {
-    "outDir": "/lib",
+    "outDir": "./dist/",
     "module": "commonjs",
     "target": "es5",
     "lib": ["es6", "dom"],
     "sourceMap": true,
-    "allowJs": true,
+    "allowJs": false,
     "moduleResolution": "node",
-    "rootDir": "src",
+    "declaration": true,
+    "rootDir": "./",
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
+    "allowSyntheticDefaultImports": true,
     "strictNullChecks": true
   },
   "exclude": [
@@ -18,6 +20,7 @@
     "build",
     "scripts",
     "acceptance-tests",
+    "__tests__",
     "webpack",
     "jest",
     "src/setupTests.ts"
