--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	],
 	"dependencies": {
 		"@babel/plugin-proposal-class-properties": "^7.3.3",
+		"@types/storybook__react": "^4.0.1",
 		"react": "^16.8.1",
 		"react-dom": "^16.8.1"
 	},
