--- a/components/grid/package.json
+++ b/components/grid/package.json
@@ -24,6 +24,8 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@coffee-shope/theme": "^1.0.1"
+    "@coffee-shope/theme": "^1.0.1",
+    "@types/lodash.memoize": "^4.1.5",
+    "lodash.memoize": "^4.1.2"
   }
 }
