--- a/utils/cs-scripts/templates/component-ts/package.json
+++ b/utils/cs-scripts/templates/component-ts/package.json
@@ -6,7 +6,7 @@
     "test": "jest",
     "start": "shope stories",
     "build": "rm -rf ./dist && tsc",
-    "prepublishOnly": "shope build"
+    "prepublishOnly": "yarn build"
   },
   "publishConfig": {
     "access": "public"
