feat(float): Add prototype float

--- a/components/float/package.json
+++ b/components/float/package.json
@@ -16,14 +16,15 @@
   },
   "devDependencies": {
     "@coffee-shope/cs-scripts": "^1.0.0",
-    "@types/react": "^16.8.1",
     "@types/jest": "^24.0.5",
+    "@types/react": "^16.8.1",
     "typescript": "^3.3.1"
   },
   "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "@coffee-shope/ripple": "^1.0.9",
     "@coffee-shope/theme": "^1.0.1"
   }
 }
