fix(ts-chores): Fix scss ambient type issues + some config fixes

--- a/utils/cs-scripts/templates/component-ts/tsconfig.json
+++ b/utils/cs-scripts/templates/component-ts/tsconfig.json
@@ -25,7 +25,8 @@
     "stories",
     "webpack",
     "jest",
-    "src/setupTests.ts"
+    "src/setupTests.ts",
+    "lib"
   ],
   "types": [
     "typePatches"
