--- a/utils/cs-scripts/templates/util-ts/package.json
+++ b/utils/cs-scripts/templates/util-ts/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@coffee-shope/{{TEMPLATE_NAME}}",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
     "start": "shope stories",
     "build": "rm -rf ./lib && tsc",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "postpublish": "rm -rf ./lib"
   },
   "publishConfig": {
     "access": "public"
