--- a/utils/cs-scripts/templates/util-ts/tsconfig.json
+++ b/utils/cs-scripts/templates/util-ts/tsconfig.json
@@ -13,7 +13,7 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
   },
   "exclude": [
     "node_modules",
@@ -23,7 +23,8 @@
     "__tests__",
     "webpack",
     "jest",
-    "src/setupTests.ts"
+    "src/setupTests.ts",
+    "lib"
   ],
   "types": [
     "typePatches"
