chore: Publish packages
 - @coffee-shope/animator@1.0.1
 - @coffee-shope/button@1.0.14
 - @coffee-shope/checkbox@1.0.9
 - @coffee-shope/field@1.0.10
 - @coffee-shope/float@1.0.1
 - @coffee-shope/grid@1.0.8
 - @coffee-shope/ripple@1.0.10
 - @coffee-shope/theme@1.0.8
 - @coffee-shope/cs-scripts@1.0.13
 - @coffee-shope/merge-event-handlers@1.0.9

--- a/components/animator/package.json
+++ b/components/animator/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@coffee-shope/grid",
-  "version": "1.0.8",
+  "name": "@coffee-shope/animator",
+  "version": "1.0.1",
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@coffee-shope/cs-scripts": "^1.0.13",
     "@types/jest": "^24.0.5",
-    "@types/react": "^16.8.3",
+    "@types/react": "^16.8.1",
     "typescript": "^3.3.1"
   },
   "author": "",
@@ -26,7 +26,6 @@
   "description": "",
   "dependencies": {
     "@coffee-shope/theme": "^1.0.8",
-    "@types/lodash.memoize": "^4.1.5",
-    "lodash.memoize": "^4.1.2"
+    "react-transition-group": "^2.5.3"
   }
 }
