--- a/components/animator/tsconfig.json
+++ b/components/animator/tsconfig.json
@@ -14,8 +14,7 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
-    "strictNullChecks": true,
-    "experimentalDecorators": true
+    "strictNullChecks": true
   },
   "exclude": [
     "node_modules",
