--- a/utils/cs-scripts/templates/component-ts/package.json
+++ b/utils/cs-scripts/templates/component-ts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@coffee-shope/{{TEMPLATE_NAME}}",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
     "start": "shope stories",
