--- a/components/animator/package.json
+++ b/components/animator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coffee-shope/animator",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
@@ -16,17 +16,20 @@
     "react": "^16.8.1"
   },
   "devDependencies": {
-    "@coffee-shope/cs-scripts": "^1.0.15",
-    "@coffee-shope/float": "^1.0.3",
+    "@coffee-shope/cs-scripts": "^1.0.16",
+    "@coffee-shope/float": "^1.0.4",
     "@types/jest": "^24.0.5",
-    "@types/react": "^16.8.1",
+    "@types/react": "^16.8.4",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-transition-group": "^2.0.16",
     "typescript": "^3.3.1"
   },
   "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@coffee-shope/theme": "^1.0.10",
+    "@coffee-shope/theme": "^1.0.11",
+    "@types/react-transition-group": "^2.0.16",
     "react-transition-group": "^2.5.3"
   }
 }
