--- a/utils/cs-scripts/templates/component-ts/tsconfig.json
+++ b/utils/cs-scripts/templates/component-ts/tsconfig.json
@@ -14,7 +14,9 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "experimentalDecorators": true,
+    "skipLibCheck": true
   },
   "exclude": [
     "node_modules",
