--- a/utils/cs-scripts/templates/util-ts/tsconfig.json
+++ b/utils/cs-scripts/templates/util-ts/tsconfig.json
@@ -14,6 +14,8 @@
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
+    "skipLibCheck": true,
+    "experimentalDecorators": true
   },
   "exclude": [
     "node_modules",
