--- a/components/animator/tsconfig.json
+++ b/components/animator/tsconfig.json
@@ -14,7 +14,8 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "skipLibCheck": true
   },
   "exclude": [
     "node_modules",
