feat(float): Lorem ipsum into story + add decorators + skipLibCheck to config

--- a/components/float/tsconfig.json
+++ b/components/float/tsconfig.json
@@ -15,7 +15,8 @@
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "skipLibCheck": true
   },
   "exclude": [
     "node_modules",
