--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"bootstrap": "lerna bootstrap",
 		"publish-all": "lerna publish --ignore coffee-shope --message=\"chore: Publish packages\"",
 		"storybook": "start-storybook -p 9001 -c .storybook",
+		"reinstall": "rm -rf node_modules/ && rm -rf **/node_modules/ && yarn && yarn bootstrap",
 		"start": "yarn storybook"
 	},
 	"devDependencies": {
