--- a/components/button/package.json
+++ b/components/button/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c",
+    "build": "rm -rf ./lib && rollup -c",
     "prepublishOnly": "yarn build"
   },
   "publishConfig": {
@@ -29,9 +29,12 @@
     "@babel/plugin-transform-runtime": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime-corejs2": "^7.3.4",
+    "node-sass": "^4.11.0",
     "rollup": "^1.3.2",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-scss": "^1.0.1"
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-postcss": "^2.0.3"
   }
 }
