--- a/components/button/package.json
+++ b/components/button/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@coffee-shope/button",
   "version": "1.0.22",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf ./lib && rollup -c",
