--- a/components/field/package.json
+++ b/components/field/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coffee-shope/field",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
@@ -24,19 +24,19 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime-corejs2": "^7.3.4",
+    "core-decorators": "^0.20.0",
     "node-sass": "^4.11.0",
     "rollup": "^1.3.2",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-svg": "^1.0.1",
-    "core-decorators": "^0.20.0"
+    "rollup-plugin-svg": "^1.0.1"
   },
   "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@coffee-shope/theme": "^1.0.14"
+    "@coffee-shope/theme": "^1.0.15"
   }
 }
