remove cs-scripts as depdendencies from packages

--- a/utils/cs-scripts/templates/util/package.json
+++ b/utils/cs-scripts/templates/util/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "shope stories",
-    "build": "shope build",
-    "prepublishOnly": "shope build"
+    "test": "jest"
   },
   "publishConfig": {
     "access": "public"
@@ -15,7 +12,6 @@
     "react": "^16.8.1"
   },
   "devDependencies": {
-    "@coffee-shope/cs-scripts": "^1.0.0"
   },
   "author": "",
   "license": "MIT",
