--- a/components/ripple/package.json
+++ b/components/ripple/package.json
@@ -4,9 +4,8 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
-    "start": "shope stories",
     "build": "rm -rf ./lib && tsc",
-    "prepublishOnly": "shope build",
+    "prepublishOnly": "yarn build",
     "postpublish": "rm -rf ./lib"
   },
   "publishConfig": {
@@ -16,7 +15,6 @@
     "react": "^16.8.1"
   },
   "devDependencies": {
-    "@coffee-shope/cs-scripts": "^1.0.20"
   },
   "author": "",
   "license": "MIT",
