--- a/components/theme/package.json
+++ b/components/theme/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.15",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "shope stories",
-    "build": "shope build",
-    "prepublishOnly": "shope build"
+    "test": "jest"
   },
   "publishConfig": {
     "access": "public"
