--- a/utils/cs-scripts/package.json
+++ b/utils/cs-scripts/package.json
@@ -10,6 +10,10 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "_moduleAliases": {
+    "@cmd": "./commands/",
+    "@tmpl": "./templates"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jay-almaraz/coffee-shope.git"
@@ -31,6 +35,7 @@
     "enzyme-adapter-react-16": "^1.9.1",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.11",
+    "module-alias": "^2.2.0",
     "path": "^0.12.7",
     "yargs": "^12.0.5"
   }
