--- a/components/field/package.json
+++ b/components/field/package.json
@@ -28,6 +28,7 @@
     "node-sass": "^4.11.0",
     "rollup": "^1.3.2",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-postcss": "^2.0.3",
