--- a/components/grid/package.json
+++ b/components/grid/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^24.0.5",
     "@types/react": "^16.8.3",
     "rollup": "^1.4.0",
+    "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-postcss": "^2.0.3",
