--- a/utils/barista/templates/component-ts/package.json
+++ b/utils/barista/templates/component-ts/package.json
@@ -4,7 +4,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf ./lib && tsc",
+    "build": "rm -rf ./lib && rollup -c",
     "prepublishOnly": "yarn build"
   },
   "publishConfig": {
@@ -16,6 +16,13 @@
   "devDependencies": {
     "@types/react": "^16.8.1",
     "@types/jest": "^24.0.5",
+    "rollup": "^1.4.0",
+    "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript2": "^0.19.3",
     "typescript": "^3.3.1"
   },
   "author": "",
