--- a/components/animator/package.json
+++ b/components/animator/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@coffee-shope/animator",
-  "version": "1.0.11",
+  "version": "1.0.0",
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf ./lib && tsc",
-    "prepublishOnly": "yarn build",
-    "postpublish": "rm -rf ./lib"
+    "build": "rm -rf ./lib && rollup -c",
+    "prepublishOnly": "yarn build"
   },
   "publishConfig": {
     "access": "public"
@@ -17,17 +16,21 @@
   "devDependencies": {
     "@coffee-shope/float": "^1.0.10",
     "@types/jest": "^24.0.5",
-    "@types/react": "^16.8.4",
-    "@types/react-dom": "^16.8.2",
-    "@types/react-transition-group": "^2.0.16",
+    "@types/react": "^16.8.1",
+    "rollup": "^1.4.0",
+    "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript2": "^0.19.3",
     "typescript": "^3.3.1"
   },
   "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@coffee-shope/theme": "^1.0.16",
-    "@types/react-transition-group": "^2.0.16",
-    "react-transition-group": "^2.5.3"
+    "@coffee-shope/theme": "^1.0.1",
+    "react-transition-group": "^2.6.0"
   }
 }
