--- a/components/ripple/package.json
+++ b/components/ripple/package.json
@@ -20,5 +20,14 @@
   "dependencies": {
     "@coffee-shope/merge-event-handlers": "^1.0.18",
     "core-decorators": "^0.20.0"
+  },
+  "devDependencies": {
+    "postcss-modules": "^1.4.1",
+    "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript2": "^0.19.3"
   }
 }
