--- a/components/ripple/package.json
+++ b/components/ripple/package.json
@@ -2,9 +2,10 @@
   "name": "@coffee-shope/ripple",
   "version": "1.0.23",
   "main": "./lib/index.js",
+  "style": "./lib/styles.scss",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf ./lib && tsc",
+    "build": "rm -rf ./lib && rollup -c",
     "prepublishOnly": "yarn build",
     "postpublish": "rm -rf ./lib"
   },
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "postcss-modules": "^1.4.1",
+    "rollup": "^1.4.0",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
