--- a/components/float/package.json
+++ b/components/float/package.json
@@ -2,9 +2,10 @@
   "name": "@coffee-shope/float",
   "version": "1.0.14",
   "main": "./lib/index.js",
+  "style": "./lib/styles.css",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf ./lib && tsc",
+    "build": "rm -rf ./lib && rollup -c",
     "prepublishOnly": "yarn build",
     "postpublish": "rm -rf ./lib"
   },
@@ -17,13 +18,22 @@
   "devDependencies": {
     "@types/jest": "^24.0.5",
     "@types/react": "^16.8.1",
+    "postcss-modules": "^1.4.1",
+    "rollup": "^1.4.0",
+    "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-svg": "^1.0.1",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript2": "^0.19.3",
     "typescript": "^3.3.1"
   },
   "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@coffee-shope/ripple": "^1.0.23",
+    "@coffee-shope/ripple": "^1.0.24",
     "@coffee-shope/theme": "^1.0.16"
   }
 }
