--- a/components/float/package.json
+++ b/components/float/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.5",
     "@types/react": "^16.8.1",
+    "node-sass": "^4.11.0",
     "postcss-modules": "^1.4.1",
     "rollup": "^1.4.0",
     "rollup-plugin-bundle-size": "^1.0.3",
@@ -33,7 +34,7 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@coffee-shope/ripple": "^1.0.24",
+    "@coffee-shope/ripple": "^1.0.25",
     "@coffee-shope/theme": "^1.0.16"
   }
 }
