--- a/components/animator/package.json
+++ b/components/animator/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^24.0.5",
     "@types/react": "^16.8.1",
     "@types/react-transition-group": "^2.0.16",
+    "node-sass": "^4.11.0",
     "rollup": "^1.4.0",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^9.2.1",
