--- a/utils/barista/package.json
+++ b/utils/barista/package.json
@@ -37,6 +37,17 @@
     "lodash": "^4.17.11",
     "module-alias": "^2.2.0",
     "path": "^0.12.7",
+    "postcss-modules": "^1.4.1",
+    "rollup": "^1.4.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript2": "^0.19.3",
+    "shelljs": "^0.8.3",
+    "typescript": "^3.3.3333",
     "yargs": "^12.0.5"
   }
 }
