--- a/utils/barista/templates/component/package.json
+++ b/utils/barista/templates/component/package.json
@@ -4,7 +4,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf ./lib && rollup -c",
+    "build": "rm -rf ./lib && barista build",
     "prepublishOnly": "yarn build"
   },
   "publishConfig": {
@@ -14,25 +14,7 @@
     "react": "^16.8.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-decorators": "^7.3.0",
-    "@babel/plugin-proposal-json-strings": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime-corejs2": "^7.3.4",
-    "node-sass": "^4.11.0",
-    "rollup": "^1.3.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-bundle-size": "^1.0.3",
-    "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-svg": "^1.0.1",
-    "rollup-plugin-terser": "^4.0.4"
+    "@coffee-shope/barista": "^1.0.2"
   },
   "author": "",
   "license": "MIT",
