Working rollup build step in Barista

--- a/utils/barista/templates/util/package.json
+++ b/utils/barista/templates/util/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{ORGANISATION_NAME}}{{TEMPLATE_NAME}}",
+  "name": "{{{{PACKAGE_NAME}}}}",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
