--- a/utils/barista/templates/util/package.json
+++ b/utils/barista/templates/util/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "{{{{PACKAGE_NAME}}}}",
+  "name": "{{PACKAGE_NAME}}",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "jest"
+    "build": "rm -rf ./lib && barista build util",
   },
   "publishConfig": {
     "access": "public"
