--- a/utils/barista/templates/component/package.json
+++ b/utils/barista/templates/component/package.json
@@ -14,7 +14,8 @@
     "react": "^16.8.1"
   },
   "devDependencies": {
-    "@coffee-shope/barista": "^1.0.2"
+    "@coffee-shope/barista": "^1.0.2",
+    "node-sass": "^4.11.0"
   },
   "author": "",
   "license": "MIT",
