--- a/utils/barista/templates/component-ts/package.json
+++ b/utils/barista/templates/component-ts/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "@types/react": "^16.8.1",
     "@types/jest": "^24.0.5",
-    "@coffee-shope/barista": "^1.0.2"
+    "@coffee-shope/barista": "^1.0.2",
+    "node-sass": "^4.11.0"
   },
   "author": "",
   "license": "MIT",
