--- a/utils/barista/package.json
+++ b/utils/barista/package.json
@@ -28,6 +28,16 @@
   },
   "homepage": "https://github.com/jay-almaraz/coffee-shope#readme",
   "dependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
     "chalk": "^2.4.2",
     "change-case": "^3.1.0",
     "copy-dir": "^0.4.0",
