--- a/utils/barista/package.json
+++ b/utils/barista/package.json
@@ -38,6 +38,8 @@
     "@babel/plugin-transform-runtime": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.3.4",
+    "@babel/runtime-corejs2": "^7.3.4",
     "chalk": "^2.4.2",
     "change-case": "^3.1.0",
     "copy-dir": "^0.4.0",
