--- a/components/button/package.json
+++ b/components/button/package.json
@@ -36,12 +36,14 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime-corejs2": "^7.3.4",
+    "autoprefixer": "^9.4.10",
     "node-sass": "^4.11.0",
     "postcss-modules": "^1.4.1",
     "rollup": "^1.3.2",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-terser": "^4.0.4"
   }
