--- a/components/button/package.json
+++ b/components/button/package.json
@@ -1,13 +1,8 @@
 {
   "name": "@coffee-shope/button",
   "version": "1.0.33",
-  "main": "build/index.cjs.js",
-  "module": "build/index.esm.js",
-  "browser": "build/index.js",
-  "style": "build/index.css",
-  "files": [
-    "build"
-  ],
+  "main": "dist/index.js",
+  "module": "dist/react-forms.esm.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf ./build && rollup -c",
