--- a/components/button/package.json
+++ b/components/button/package.json
@@ -18,7 +18,9 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@coffee-shope/theme": "^1.0.16"
+    "@coffee-shope/theme": "^1.0.17",
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.4",
@@ -31,7 +33,6 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime-corejs2": "^7.3.4",
-    "node-sass": "^4.11.0",
     "postcss-modules": "^1.4.1",
     "rollup": "^1.3.2",
     "rollup-plugin-babel": "^4.3.2",
