--- a/components/button/package.json
+++ b/components/button/package.json
@@ -2,7 +2,6 @@
   "name": "@coffee-shope/button",
   "version": "1.0.36",
   "main": "./lib/index.js",
-  "style": "./lib/styles.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf ./lib && rollup -c",
@@ -12,15 +11,15 @@
     "access": "public"
   },
   "peerDependencies": {
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
     "react": "^16.8.1"
   },
   "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@coffee-shope/theme": "^1.0.17",
-    "@emotion/core": "^10.0.7",
-    "@emotion/styled": "^10.0.7"
+    "@coffee-shope/theme": "^1.0.17"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.4",
@@ -36,8 +35,10 @@
     "postcss-modules": "^1.4.1",
     "rollup": "^1.3.2",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-terser": "^4.0.4"
   }
