--- a/utils/barista/package.json
+++ b/utils/barista/package.json
@@ -45,6 +45,7 @@
     "copy-dir": "^0.4.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
+    "folder-hash": "^2.1.2",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.11",
     "module-alias": "^2.2.0",
