--- a/utils/barista/templates/util/package.json
+++ b/utils/barista/templates/util/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf ./lib && barista build util"
+    "build": "barista build util"
   },
   "publishConfig": {
     "access": "public"
