--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -16,8 +16,7 @@
   "devDependencies": {
     "@coffee-shope/barista": "^1.1.7",
     "@types/jest": "^24.0.5",
-    "@types/react": "^16.8.1",
-    "node-sass": "^4.11.0"
+    "@types/react": "^16.8.1"
   },
   "author": "",
   "license": "MIT",
