--- a/components/stack/package.json
+++ b/components/stack/package.json
@@ -17,8 +17,7 @@
     "@coffee-shope/barista": "^1.1.7",
     "@storybook/addon-knobs": "^5.2.6",
     "@types/jest": "^24.0.5",
-    "@types/react": "^16.8.1",
-    "node-sass": "^4.11.0"
+    "@types/react": "^16.8.1"
   },
   "author": "",
   "license": "MIT",
