--- a/utils/barista/templates/component-ts/package.json
+++ b/utils/barista/templates/component-ts/package.json
@@ -16,8 +16,7 @@
   "devDependencies": {
     "@types/react": "^16.8.1",
     "@types/jest": "^24.0.5",
-    "@coffee-shope/barista": "^1.0.2",
-    "node-sass": "^4.11.0"
+    "@coffee-shope/barista": "^1.0.2"
   },
   "author": "",
   "license": "MIT",
