use CoffeeShopeThemeProvider in all active stories

--- a/components/animator/package.json
+++ b/components/animator/package.json
@@ -35,6 +35,7 @@
   "description": "",
   "dependencies": {
     "@coffee-shope/theme": "^1.0.1",
+    "@coffee-shope/theme-provider": "^1.0.0",
     "react-spring": "^8.0.18"
   }
 }
