--- a/components/button/package.json
+++ b/components/button/package.json
@@ -19,7 +19,8 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@coffee-shope/theme": "^1.0.19"
+    "@coffee-shope/theme": "^1.0.19",
+    "@coffee-shope/theme-provider": "^1.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.4",
