--- a/components/checkbox/package.json
+++ b/components/checkbox/package.json
@@ -38,6 +38,7 @@
   "description": "",
   "dependencies": {
     "@coffee-shope/theme": "^1.0.16",
+    "@coffee-shope/theme-provider": "^1.0.0",
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7"
   }
