--- a/components/ripple/package.json
+++ b/components/ripple/package.json
@@ -19,6 +19,7 @@
   "description": "",
   "dependencies": {
     "@coffee-shope/merge-event-handlers": "^1.0.27",
+    "@coffee-shope/theme-provider": "^1.0.0",
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7",
     "core-decorators": "^0.20.0"
